# OOP

./: .gitmodules
Task_1/: main.cpp
Task_2/: main.cpp
Task_3/: Exception.h  Matrix.cpp  Matrix.h  main.cpp
Task_4/: Exception.cpp  Exception.h  GeneralPrint.cpp  GeneralPrint.h  Matrix.cpp  Matrix.h  ReadMe.txt  dinamicmake.sh  dinamicrun.sh  main.cpp  static1.sh  static2.sh
Task_4.0/: Exception.cpp  Matrix.cpp  PrintMatrix.h  PrintMatrixConsole.cpp  static2.sh
Task_4.0/DinamicBuild/File/: CMakeLists.txt
Task_4.1/: .gitignore  CMakeLists.txt  Matrix.h  build.sh  run.sh
Task_4/DinamicBuild/Console/: CMakeLists.txt
Task_4/DinamicConsole/: CMakeLists.txt
Task_4/DinamicFile/: CMakeLists.txt
Task_4/Static1/: CMakeLists.txt
Task_5/: .gitignore  CMakeLists.txt  Matrix.h  PrintMatrixFile.cpp  ReadMe.txt  build.sh  run.sh  runtest.sh
Task_5/Matrix/: CMakeLists.txt
Task_5/Matrix/src/: Matrix.cpp
Task_5/test/: CMakeLists.txt  test.cpp
Task_6/: CMakeLists.txt  ReadMe.txt  build.sh  main.cpp  runtest.sh
Task_6/Base64/: CMakeLists.txt
Task_6/Base64/include/: Base64.h
Task_6/Base64/src/: Base64.cpp
Task_6/tests/: CMakeLists.txt  test.cpp
Task_7/: CMakeLists.txt  ReadMe.txt  main.cpp
Task_8/: CMakeLists.txt  main.cpp
Task_8/EBash/: CMakeLists.txt
Task_8/EBash/src/: EBash.cpp
Task_8/Polish/: CMakeLists.txt
Task_8/Polish/include/: Polish.h
Task_8/Polish/src/: Polish.cpp
Task_8/tests/: CMakeLists.txt  test.cpp
